--- a/Zadanie_3.01/MainWindow.xaml
+++ b/Zadanie_3.01/MainWindow.xaml
@@ -16,12 +16,12 @@
         <Label x:Name="lblPole" HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Margin="20,70,0,0"
-               Content="Pole" MouseLeftButtonDown="lblPole_MouseLeftButtonDown"></Label>
-        
+               Content="Pole"></Label>
+
         <Label x:Name="lblObwod"
                Content="Obwod" HorizontalAlignment="Left"
                VerticalAlignment="Top"
-               Margin="20,120,0,0" MouseLeftButtonDown="lblObwod_MouseLeftButtonDown">
+               Margin="20,120,0,0">
         </Label>
 
         <TextBox x:Name="txtBok"
@@ -29,7 +29,7 @@
                  VerticalAlignment="Top"
                  HorizontalAlignment="Left"
                  Margin="80,20,0,0"
-                 VerticalContentAlignment="Center"
+                 VerticalContentAlignment="Center" TextChanged="txtBok_TextChanged"
                  ></TextBox>
         <TextBox x:Name="txtPole"
                  Width="100" Height="25"
@@ -47,5 +47,21 @@
                  VerticalContentAlignment="Center"
                  IsEnabled="False"
                  ></TextBox>
+
+        <Label x:Name="lblKomunikat"
+               Content="Wpisz wymiar bloku"
+               Foreground="#FF0000"
+               Margin="200,20,0,0"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top"></Label>
+
+        <Button x:Name="btnWyczysc"
+                Content="Wyczyść"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="80,170,0,0"
+                Width="100"
+                Height="20" Click="btnWyczysc_Click"
+                ></Button>
     </Grid>
 </Window>
