--- a/Zadanie_3.1-3.3/MainWindow.xaml
+++ b/Zadanie_3.1-3.3/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Zadanie_3._02.MainWindow"
+﻿<Window x:Class="Zadanie_3._1_3._3.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Rysowanie kwadratu" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="450" Width="800">
+    <Grid Background="LightGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="350" />
             <ColumnDefinition Width="450" />
@@ -122,5 +122,26 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    Stroke="Black" />
+
+        <RadioButton Name="ukryjRysunekON"
+                     GroupName="ukryjRysunek"
+                     Content="ON"
+                     HorizontalAlignment="Left"
+                     VerticalAlignment="Top"
+                     Margin="220,200,0,0" Checked="ukryjRysunekON_Checked"/>
+
+        <RadioButton Name="ukryjRysunekOFF"
+                     GroupName="ukryjRysunek"
+                     Content="OFF"
+                     HorizontalAlignment="Left"
+                     VerticalAlignment="Top"
+                     Margin="220,220,0,0" Checked="ukryjRysunekOFF_Checked"/>
+
+        <Image Source="images/1.png" 
+               VerticalAlignment="Top"
+               HorizontalAlignment="Left"
+               Margin="5,350,0,0" 
+               Height="60" 
+               Width="60" Stretch="Fill"/>
     </Grid>
 </Window>
