--- a/Zadanie_6.03/MainWindow.xaml
+++ b/Zadanie_6.03/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Rozdzial_6._01.MainWindow"
+﻿<Window x:Class="Zadanie_6._03.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Rozdzial_6._01"
+        xmlns:local="clr-namespace:Zadanie_6._03"
         mc:Ignorable="d"
-        Title="Lista produktów" Height="450" Width="800">
+Title="Lista produktów" Height="450" Width="800">
     <Grid>
         <ListView x:Name="lstProdukty">
             <ListView.View>
