--- a/Zadanie_6.05/App.xaml
+++ b/Zadanie_6.05/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Rozdzial_6._01.App"
+﻿<Application x:Class="Zadanie_6._05.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
