--- a/Zadanie_6.06/App.xaml
+++ b/Zadanie_6.06/App.xaml
@@ -1,7 +1,9 @@
-﻿<Application x:Class="Rozdzial_6._01.App"
+﻿<Application x:Class="Zadanie_6._06.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:Zadanie_6._06"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+         
     </Application.Resources>
 </Application>
