--- a/Zadanie_6.08_1/MainWindow.xaml
+++ b/Zadanie_6.08_1/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Zadanie_6._07.MainWindow"
+﻿<Window x:Class="Zadanie_6._08_1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zadanie_6._07"
+        xmlns:local="clr-namespace:Zadanie_6._08_1"
         mc:Ignorable="d"
-        Title="Lista produktów" Height="450" Width="800">
+        Title="Lista produktów" Height="450" Width="800" MinHeight="200" MinWidth="250">
     <Window.Resources>
         <Style TargetType="ListViewItem">
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -16,6 +16,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -40,5 +41,14 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button VerticalAlignment="Stretch"
+                HorizontalAlignment="Stretch"
+                Grid.ColumnSpan="2"
+                Grid.Row="2" 
+                Width="150"
+                Height="40"
+                Content="Usuń element" 
+                Click="delete_Click" 
+                x:Name="delete"></Button>
     </Grid>
 </Window>
