--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -7,16 +7,15 @@
         mc:Ignorable="d"
         Title="Przywitanie" Height="450" Width="800">
     <Grid Background="WhiteSmoke">
-        <Button Click="btnStart_Click" x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="75,50,0,0" VerticalAlignment="Top" Width="135" Height="60" 
+        <Button Click="btnStart_Click" x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="75,50,0,0" VerticalAlignment="Top" Width="135" Height="60"
                 FontFamily="Times New Roman" FontSize="20pt" FontWeight="Bold"
                 IsEnabled="False"
                 Background="DarkKhaki"
                 BorderBrush="Beige"
-                Foreground="DarkGreen"
-                />
+                Foreground="DarkGreen" />
 
-        <Button MouseEnter="btnTime_MouseEnter" 
-                MouseLeave="btnTime_MouseLeave" 
+        <Button MouseEnter="btnTime_MouseEnter"
+                MouseLeave="btnTime_MouseLeave"
                 x:Name="btnTime"
                 Margin="75,150,0,0"
                 Width="135"
@@ -26,10 +25,9 @@
                 Content="Time"
                 FontFamily="Times New Roman"
                 FontSize="20pt"
-                FontWeight="Bold"
-                />
+                FontWeight="Bold" />
 
-        <Button Width="135" Height="60" 
+        <Button Width="135" Height="60"
                 Margin="75,250,0,0"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Left"
@@ -40,12 +38,9 @@
                 x:Name="btnWlaczStart"
                 Click="btnWlaczStart_Click"></Button>
 
-
         <TextBlock VerticalAlignment="Center" Width="150" TextAlignment="Center"
                    >Czy chcesz podwyżkę?</TextBlock>
         <Button x:Name="btnPodwyzkaTak" Width="50" Height="20" Content="Tak" Margin="0,50,80,0" MouseEnter="btnPodwyzkaTak_MouseEnter"></Button>
         <Button x:Name="btnPodwyzkaNie" Width="50" Height="20" Content="Nie" Margin="80,50,0,0"></Button>
-    
-        
     </Grid>
 </Window>
