--- a/Zadanie_10.01/App.xaml
+++ b/Zadanie_10.01/App.xaml
@@ -1,9 +1,15 @@
-﻿<Application x:Class="Zadanie_10._01.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Zadanie_10._01"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="Zadanie_10._01.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Zadanie_10._01"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <LinearGradientBrush x:Key="buttonBackgroundForWholeApp" StartPoint="0.5,0" EndPoint="0.5,1">
+            <GradientStop Offset="0" Color="White" />
+            <GradientStop Offset="0.2" Color="LightCyan" />
+            <GradientStop Offset="0.6" Color="LightBlue" />
+            <GradientStop Offset="1" Color="LightGreen" />
+        </LinearGradientBrush>
     </Application.Resources>
 </Application>
