--- a/Zadanie_10.03/App.xaml
+++ b/Zadanie_10.03/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="Zadanie_10._04.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Zadanie_10._04"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="Zadanie_10._04.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Zadanie_10._04"
+    StartupUri="MainWindow.xaml">
+    <Application.Resources />
 </Application>
