--- a/Zadanie_11.03/App.xaml
+++ b/Zadanie_11.03/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Rozdzial_10._04.App"
+    x:Class="Zadanie_11._03.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Rozdzial_10._04"
+    xmlns:local="clr-namespace:Zadanie_11._03"
     StartupUri="MainWindow.xaml">
     <Application.Resources />
 </Application>
