koniec rozdziału 13 MVVM

--- a/Zadanie_12.05/MainWindow.xaml
+++ b/Zadanie_12.05/MainWindow.xaml
@@ -36,7 +36,7 @@
             AutoGenerateColumns="False"
             ItemsSource="{StaticResource kolekcja}">
             <DataGrid.RowValidationRules>
-                <DataErrorValidationRule/>
+                <DataErrorValidationRule />
             </DataGrid.RowValidationRules>
             <DataGrid.Columns>
                 <DataGridTextColumn
