--- a/Zadanie_7.03/MainWindow.xaml
+++ b/Zadanie_7.03/MainWindow.xaml
@@ -1,23 +1,30 @@
-﻿<Window x:Class="Zadanie_7._03.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zadanie_7._03"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="Zadanie_7._03.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Zadanie_7._03"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
 
-        <DataGrid x:Name="gridProdukty"
-                  AutoGenerateColumns="False"
-                  AlternatingRowBackground="Lavender"
-                  GridLinesVisibility="None"
-                  Margin="10">
+        <DataGrid
+            x:Name="gridProdukty"
+            Margin="10"
+            AlternatingRowBackground="Lavender"
+            AutoGenerateColumns="False"
+            GridLinesVisibility="None">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Symbol" Binding="{Binding Symbol}" />
-                <DataGridTextColumn Header="Nazwa" Binding="{Binding Nazwa}" />
-                <DataGridTextColumn Header="Liczba sztuk" Binding="{Binding LiczbaSztuk}" />
-                <DataGridComboBoxColumn x:Name="nazwaMagazynu" Header="Magazyn" SelectedItemBinding="{Binding Magazyn}" />
+                <DataGridTextColumn Binding="{Binding Symbol}" Header="Symbol" />
+                <DataGridTextColumn Binding="{Binding Nazwa}" Header="Nazwa" />
+                <DataGridTextColumn Binding="{Binding LiczbaSztuk}" Header="Liczba sztuk" />
+                <DataGridComboBoxColumn
+                    x:Name="nazwaMagazynu"
+                    Header="Magazyn"
+                    SelectedItemBinding="{Binding Magazyn}" />
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
