--- a/Microsoft_Learn/11. Interact with data in Blazor web apps/BlazingPizzaSite/Pages/ConfigurePizzaDialog.razor
+++ b/Microsoft_Learn/11. Interact with data in Blazor web apps/BlazingPizzaSite/Pages/ConfigurePizzaDialog.razor
@@ -10,7 +10,7 @@
         <form class="dialog-body">
             <div>
                 <label>Size:</label>
-                <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" />
+                <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" @bind="Pizza.Size" @bind:event="oninput" step="1" />
                 <span class="size-label">
                     @(Pizza.Size) ($@(Pizza.GetFormattedTotalPrice()))
                 </span>
