--- a/Microsoft_Learn/12. Use pages, routing, and layouts to improve Blazor navigation/BlazingPizzaSite/Pages/MyOrders.razor
+++ b/Microsoft_Learn/12. Use pages, routing, and layouts to improve Blazor navigation/BlazingPizzaSite/Pages/MyOrders.razor
@@ -3,22 +3,6 @@
 @inject HttpClient httpClient
 @inject NavigationManager navigationManager
 
-<div class="top-bar">
-    <a class="logo" href="">
-        <img src="img/logo.svg" />
-    </a>
-
-    <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
-        <img src="img/pizza-slice.svg" />
-        <div>Get Pizza</div>
-    </NavLink>
-
-    <NavLink href="myorders" class="nav-tab">
-        <img src="img/bike.svg" />
-        <div>My Orders</div>
-    </NavLink>
-</div>
-
 <div class="main">
     @if(ordersWithStatus == null){
         <text>Loading...</text>
@@ -47,7 +31,7 @@
                     @if(@order.StatusText != "Delivered")
                     {
                         <div class="col flex-grow-0">
-                            <a href="myorders/" class="btn btn-success">
+                            <a href="myorders/@order.Order.OrderId" class="btn btn-success">
                                 Track &gt;</a>
                                 </div>
                     }
