--- a/Microsoft_Learn/14. Build rich interactive components for your Blazor web apps/BlazingPizzaSite/Pages/MyOrderDetails.razor
+++ b/Microsoft_Learn/14. Build rich interactive components for your Blazor web apps/BlazingPizzaSite/Pages/MyOrderDetails.razor
@@ -30,7 +30,7 @@
                     Order placed @orderWithStatus.Order.CreatedTime.ToLongDateString()
                 </h2>
                 <p class="ml-auto mb-0">
-                    Status: <strong>@orderWithStatus.StatusText</strong>
+                    Status: <strong id="orderStatus">@orderWithStatus.StatusText</strong>
                 </p>
             </div>
             <div class="track-order-body">
