--- a/Microsoft_Learn/14. Build rich interactive components for your Blazor web apps/BlazingPizzaSite/Pages/ConfigurePizzaDialog.razor
+++ b/Microsoft_Learn/14. Build rich interactive components for your Blazor web apps/BlazingPizzaSite/Pages/ConfigurePizzaDialog.razor
@@ -1,4 +1,6 @@
-﻿<div class="dialog-container">
+﻿@inject IJSRuntime jsRuntime;
+
+<div class="dialog-container">
     <div class="dialog">
         <div class="dialog-title">
             <h2>@Pizza.Special.Name</h2>
@@ -7,7 +9,8 @@
         <form class="dialog-body">
             <div>
                 <label>Size:</label>
-                <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" @bind="Pizza.Size" @bind:event="oninput" step="1" />
+                <input @ref="sizeRange" type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" @bind="Pizza.Size"
+                    @bind:event="oninput" step="1" />
                 <span class="size-label">
                     @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
                 </span>
@@ -24,8 +27,31 @@
     </div>
 </div>
 
-@code{
+@code {
     [Parameter] public Pizza Pizza { get; set; }
     [Parameter] public EventCallback OnCancel { get; set; }
     [Parameter] public EventCallback OnConfirm { get; set; }
+
+    private ElementReference sizeRange;
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (Pizza.Special.Name == "Margherita Family Size")
+        {
+            Pizza.DefaultSize = 24;
+            Pizza.Size = 24;
+            await jsRuntime.InvokeVoidAsync("disableElement", sizeRange);
+        }
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (Pizza.Special.Name == "Margherita Family Size")
+        {
+            if (firstRender)
+            {
+                await jsRuntime.InvokeVoidAsync("disableElement", sizeRange);
+            }
+        }
+    }
 }
