--- a/Microsoft_Learn/14. Build rich interactive components for your Blazor web apps/BlazingPizzaSite/Pages/MyOrders.razor
+++ b/Microsoft_Learn/14. Build rich interactive components for your Blazor web apps/BlazingPizzaSite/Pages/MyOrders.razor
@@ -3,40 +3,53 @@
 @inject NavigationManager navigationManager
 
 <div class="main">
-    @if(ordersWithStatus == null){
+    @if (ordersWithStatus == null)
+    {
         <text>Loading...</text>
     }
-    else if(!ordersWithStatus.Any())
+    else if (!ordersWithStatus.Any())
     {
         <h2>No orders palced</h2>
         <a class="btn btn-success" href="">Order some pizza</a>
     }
     else
     {
-        <div class="list-group orders-list">
-            @foreach(var order in ordersWithStatus)
-            {
-                <div class="list-group-item">
-                    <div class="col">
-                        <h5>@order.Order.CreatedTime.ToLongDateString()</h5>
-                        Items:
-                        <strong>@order.Order.Pizzas.Count</strong>
-                        Total price:
-                        <strong>£@order.Order.GetFormattedTotalPrice()</strong>
-                    </div>
-                    <div class="col">
-                        Status: <strong>@order.StatusText</strong>
-                    </div>
-                    @if(@order.StatusText != "Delivered")
-                    {
-                        <div class="col flex-grow-0">
-                            <a href="myorders/@order.Order.OrderId" class="btn btn-success">
-                                Track &gt;</a>
-                                </div>
-                    }
-                </div>
-            }
-        </div>
+        <TabContainer>
+            <div class="track-order">
+                @foreach (var item in ordersWithStatus)
+                {
+                    <TabPage Title=@item.Order.CreatedTime.ToLongDateString()>
+                        <div class="track-order-title">
+                            <h2>Order placed: @item.Order.CreatedTime.ToShortTimeString()</h2>
+                            <p class="ml-auto mb-0">
+                                Items: <strong>@item.Order.Pizzas.Count()</strong>
+                                Total price: <strong>£@item.Order.GetFormattedTotalPrice()</strong>
+                                @if (@item.StatusText != "Delivered")
+                                {
+                                    <a href="myorders/@item.Order.OrderId" class="btn btn-success ml-4">
+                                        Track &gt;
+                                    </a>
+                                }
+                            </p>
+                        </div>
+                        <div class="track-order-body">
+                            <div class="track-order-details">
+                                @foreach (var pizza in item.Order.Pizzas)
+                                {
+                                    <p>
+                                        <strong>
+                                            @(pizza.Size)"
+                                            @pizza.Special.Name
+                                            (£@pizza.GetFormattedTotalPrice())
+                                        </strong>
+                                    </p>
+                                }
+                            </div>
+                        </div>
+                    </TabPage>
+                }
+            </div>
+        </TabContainer>
     }
 </div>
 
